Customize repo and remove redux

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,2 @@
 NODE_ENV=development
-APP_NAME=<Your cool app name>
-PORT=<Port to run app on>
-
-BOOKS_API_ID=<VALUE>
-BOOKS_API_SECRET=<VALUE>
+PORT=3000
