--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,5 @@
 {
-  "title": "Styled React App",
+  "title": "Styled GraphQL React App",
   "trustProxy": true,
   "logging": {
     "format": "combined",
