--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "styled-react-app",
+  "name": "styled-graphql-react-app",
   "version": "1.0.0",
-  "description": "A universal react app with styled-components support",
+  "description": "A universal react app with styled-components and GraphQL support",
   "main": "build/server/index.js",
   "scripts": {
     "build:server": "babel ./src --out-dir build",
@@ -59,10 +59,7 @@
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
     "react-helmet": "^5.2.1",
-    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
-    "redux": "^4.0.5",
-    "redux-api-middleware": "^3.2.0",
     "shortstop-handlers": "^1.0.1",
     "shortstop-regex": "0.0.1",
     "store": "^2.0.12",
