--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "homepage": "https://github.com/dhruv-m-patel/universal-react-app#readme",
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
     "@babel/runtime": "^7.5.5",
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-brands-svg-icons": "^5.12.0",
@@ -43,6 +44,9 @@
     "@fortawesome/react-fontawesome": "^0.1.8",
     "@loadable/component": "^5.12.0",
     "@loadable/server": "^5.12.0",
+    "apollo-boost": "^0.4.7",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-server-express": "^2.11.0",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "confit": "^3.0.0",
@@ -53,6 +57,7 @@
     "express-enrouten": "^1.3.0",
     "fast-deep-equal": "^2.0.1",
     "fetch-everywhere": "^1.0.5",
+    "graphql-tag": "^2.10.3",
     "meddleware": "^3.0.3",
     "morgan": "^1.9.1",
     "react": "^16.13.0",
